Fix overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@
   padding: 1rem;
   gap: 0.3rem;
   backdrop-filter: blur(1rem);
+  overflow: auto;
 }
 
 .screen {
@@ -44,6 +45,7 @@
   background-color: rgba(186, 186, 186, 0.54);
   border-radius: 1rem;
   backdrop-filter: blur(10px);
+  overflow: auto;
 }
 
 .topScreen {
